# megumi

./: .gitignore  CONTEXT.md  README.md  build.sh  sync.sh  sync_r2.sh
backend/: Cargo.toml
backend/src/: fsevents.rs  main.rs  state.rs
docs/adr/: 0001-content-unit-checkpoints-and-root-manifest-publishing.md
frontend/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  manifest.ts  page.tsx
frontend/app/api/libraries/: route.ts
frontend/app/api/progress/: route.ts
frontend/app/api/store/[key]/: route.ts
frontend/components/: app.tsx
frontend/components/layout/: app-layout.tsx  book-library.tsx  book-reader.tsx  comic-library.tsx  comic-reader.tsx  library-area.tsx  sidebar.tsx  tab-area.tsx  theme-switcher.tsx  video-library.tsx  video-player.tsx
frontend/components/ui/: comic-strip.tsx  grid-item.tsx  image-view.tsx
frontend/hooks/: use-book-reading-session.ts  use-comic-reading-session.ts  use-comic-strip.ts  use-image-tags.ts  use-is-phone.ts  use-native-open.ts
frontend/lib/: library-queries.ts  manifest.ts  scanner.ts  tag-actions.ts  tags.ts
frontend/store/: library.ts  progress.ts  tabs.ts  ui.ts
frontend/styles/: base.css
frontend/types/: library.ts
worker/: README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
worker/src/: index.ts
