[package]
name = "megumi-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.2"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
fast_image_resize = "6.0.0"
memmap2 = "0.9.10"
natord = "1.0.9"
num_cpus = "1.17.0"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting"] }
turbojpeg = "1.4.0"
webp = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
fsevent-stream = "0.2.3"
futures-executor = "0.3.31"
futures-util = "0.3.31"
plist = "1.8.0"
xattr = "1.6.1"
